.. $Id$

.. _CHANGES:

===============
CHANGES
===============

:v1.1:
	2012-08-16, tagged version canSAS1d/1.1
	
	2012-10-31, still some more changes, need to retag
	
	* TRAC #17: wontfix: clean up rules
	* TRAC #18: added timestamp attribute to SASdata and SAStransmission_spectrum
	* TRAC #20: slight change in format of namespace string and URL
	* TRAC #21: added {any} element at end of SASdata and SAStransmission_spectrum
	* TRAC #22: added SAStransmission_spectrum
	* TRAC #27: rebrand from smallangles.net to cansas.org
	
	* slight changes in documentation of units (Angstrom and Celsius)
	* restriction against using UNICODE is lifted
	* removed the Glossary
	
	2013-03-15, identified that v1.1 is a branch, not yet ready for release
	
	* cleanup XSLT and reduce to just one XSLT
	* clean up the examples, remove unnecessary material
	* remove the mediawiki directory, we are done with it now

:v1.0:
	2009-05-12, tagged version canSAS1d/1.0